2004-09-10  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b179

	* Fix: Caption options in upload via form was ignored.
	       Fixed with de-globalize setCaption in save_photos.php

2004-09-10  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b178

	* Change: Make "Layout" the first tab in Step3 of config.
		  This avoids confusing. Because is initially selected, but was 2nd tab.

	* Fix: Creating Subalbums did not work.
	       Fixed with de-globalize do_command a little more (parentName for subalbum)

2004-09-10  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b177

	* Fix: De-globalize sort_album.php, view_photo_properties.php, extra_fields.php

2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b176

	* Fix: Some popups in Mambo were still displaying inside the UI
	  because they were not built using 'type=popup' for makeGalleryURL

2004-09-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b175

	* Fix: Admin password correctly stored in config wiz.

2004-09-09  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b174

	* Fix: removed Warning in classes/Album.php

	* Fix: completed change albums permissions fix.

	* Change: use strict html 4.01 in albums.php for <link> to avoid confused Validator

2004-09-09  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b173

	* Fix: De-globalize do_command.php, album_permissions.php

	* Fix: initial admin user was not created in setup, as the password were not global.

2004-09-09  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b172

	* Fix: De-globalize manage users, create user, edit_field.php, add_photos.php, save_photos.php,
	       add_form.inc

2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b171

	* Fix: view_album wasn't honoring $page

	* Fix: PHP notice about unset watermark var in view_album

	* Fix: Correct save_photos when using methods other than Form

2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b170

	* Fix: Bug in view_photo prevented inline comments from operating